# sukebei_crawler

./: .gitignore  README.md  config.example.yaml  pyproject.toml  setup.cfg
docs/: cli-manual.md  crawler-plan.md
src/sukebei_crawler/: cli.py  config.py  downloader.py  filters.py  http_client.py  models.py  parser.py  product_code.py  server.py  size.py  storage.py
sukebei_crawler/: __init__.py
tests/: test_core.py
