[metadata]
name = sukebei-crawler
version = 0.1.0
description = Low-frequency CLI crawler for collecting filtered torrent listing metadata.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    beautifulsoup4>=4.12
    httpx>=0.27
    PyYAML>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sukebei-crawler = sukebei_crawler.cli:main
